Fix alignment issue in main page grid

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
 h1 {
   font-size: var(--h1);
 }
-body, main {
+body {
   background-color: #1e1e1e;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
